Update from lesson

--- a/Project/Untitled1.ipynb
+++ b/Project/Untitled1.ipynb
@@ -10,29 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "630f0a67-ab04-4771-82ab-4013f7ff98d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "5cc9f7d5-7728-4766-a417-1ed12ae07319",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e37bb892-1075-47a4-8250-deab28a1311d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
