--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -49239,6 +49239,16 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Добавь название диаграммы"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "52c01708acd96c57"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "So the correlation can be seen, but it is not very representative, because for example anime with 1 or 2 genres also have different ratings from 1 to 10, and the highest rating has anime with two genres. So probably the correlation is just a coincidence."
    ],
    "metadata": {
@@ -49291,6 +49301,16 @@
     }
    },
    "id": "47e98a87f78981be"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Добавь название диаграммы"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "42db1537887d6a1d"
   },
   {
    "cell_type": "markdown",
@@ -49357,6 +49377,16 @@
     }
    },
    "id": "3c8cb7f286de9dd7"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Добавь легенду и название диаграммы на английском"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d3d59291a2f63067"
   }
  ],
  "metadata": {
