--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -49357,6 +49357,16 @@
     }
    },
    "id": "3c8cb7f286de9dd7"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Добавься проверка ТГ"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7a78d5bddccf205f"
   }
  ],
  "metadata": {
